# feature-matching-benchmark

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
feature_matching/eval/: README.md  matching_accuracy.py  retrieval_metrics.py  timing.py  utils.py
feature_matching/experiments/: superpoint_lightglue.py  utils.py
models/models--ETH-CVG--lightglue_superpoint/refs/: main
models/models--ETH-CVG--lightglue_superpoint/snapshots/5f5f626efee99f37dbc9eafea879d24d297aeab8/: config.json  model.safetensors  preprocessor_config.json
tests/data/landmark/test/: 00_15_44.json
tests/data/query/: 00_15_13.json  00_15_13.txt  00_15_14.json  00_15_14.txt  00_15_15.json  00_15_15.txt  00_15_16.json  00_15_16.txt  00_15_17.json  00_15_17.txt  00_15_18.json  00_15_18.txt  00_15_19.json  00_15_19.txt  00_15_21.json  00_15_21.txt  00_15_22.json  00_15_22.txt
tests/eval/: test_retrieval_metrics.py  test_utils.py
tests/experiments/: test_utils.py
